modules/aws/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: >
  aws

  Sample SAM Template for aws
  
# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
Globals:
  Function:
    Timeout: 3
Parameters:
  VpcId:
    Description: Black Salt IT NMS VPC ID
    Type: AWS::EC2::VPC::Id
    Default: vpc-021ef86252212fc01
  SubnetTasKenoAPI:
    Description: Tas Keno NMS Subnet
    Type: AWS::EC2::Subnet::Id
    Default: subnet-05b8af1c3f51c96bd
  RouteTableTasKeno:
    Description: Tas Keno Route Table
    Type: String
    Default: rtb-094154225a9592f6c
  S3ConfigBucket:
    Description: Storage for Config Templates
    Type: String
    Default: taskeno-config
  LibreToken:
    Description: Libre API Token
    Type: String
    Default: 562cf058e30f6798aaefe4136362cefb
Resources:

  SecurityGroupLambdaVPC:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all inbound and outbound traffic
      GroupName: LambdaFunctionSG
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: '0.0.0.0/0'
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: '0.0.0.0/0'

  VPCEndpointTasKenoDynamodb:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref VpcId
      ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref RouteTableTasKeno

  VpcEndpointApiGateway:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub com.amazonaws.${AWS::Region}.execute-api
      VpcId: !Ref VpcId
      VpcEndpointType: Interface
      SubnetIds:
        - !Ref SubnetTasKenoAPI
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref SecurityGroupAPIVPCEndpoint

  SecurityGroupAPIVPCEndpoint:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTPS traffic to Private API
      GroupName: API Gateway VPC Endpoint
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 172.27.251.10/32
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 172.27.247.0/25
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  DynamoDBAccessPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: DynamoDBAccessPolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - dynamodb:DescribeTable
              - dynamodb:Query
              - dynamodb:Scan
              - dynamodb:GetItem
              - dynamodb:PutItem
              - dynamodb:UpdateItem
              - dynamodb:DeleteItem
            Resource: !Sub arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${DynamoDBTableTasKenoNMS}
#            Condition:
#              StringEquals:
#                aws:SourceVpce: !Ref VpcId

  Route53ManagePolicy:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      ManagedPolicyName: 'Route53ManagePolicy'
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Action:
              - 'route53:ListHostedZones'
              - 'route53:ListResourceRecordSets'
            Resource: '*'
          - Effect: 'Allow'
            Action:
              - 'route53:GetHostedZone'
              - 'route53:ChangeResourceRecordSets'
            Resource: 'arn:aws:route53:::hostedzone/*'

  RoleTasKenoAPI:
    Type: AWS::IAM::Role
    Properties:
      RoleName: TasKenoAPIAccessRole
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - !Ref DynamoDBAccessPolicy
        - !Ref Route53ManagePolicy
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
        - arn:aws:iam::aws:policy/AmazonSQSFullAccess
      Policies:
        - PolicyName: S3Access
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - s3:*
                  - s3:GetObject
                  - s3:PutObject
                Resource: !Sub arn:aws:s3:::${S3ConfigBucket}/*

  RoleClientLambdaAuthorizer:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: LambdaAuthorizerPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: '*'

  FunctionClientAuthorizer:
    Type: AWS::Serverless::Function
    Properties:
      Timeout: 10
      MemorySize: 128
      CodeUri: assetmanager/
      Handler: client_authorizer.lambdaHandler
      Runtime: nodejs20.x
      FunctionName: ClientAuthorizer
      Architectures:
        - x86_64
      Environment:
        Variables:
          JWKS_URL: !Sub https://cognito-idp.ap-southeast-2.amazonaws.com/ap-southeast-2_JKchaTUnw/.well-known/jwks.json
      Role: !GetAtt RoleClientLambdaAuthorizer.Arn
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: true
        Target: "es2022"
        Sourcemap: false
        EntryPoints:
          - client_authorizer.ts

  AuthorizerClient:
    Type: AWS::ApiGateway::Authorizer
    Properties:
      Name: 'ClientLambdaAuthorizer'
      RestApiId: !Ref RestAPITasKeno
      Type: REQUEST
      AuthorizerUri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${FunctionClientAuthorizer.Arn}/invocations
      IdentitySource: method.request.header.Authorization
      AuthorizerResultTtlInSeconds: 0

  ClientLambdaAuthorizerApiGatewayInvoke:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName: !Ref FunctionClientAuthorizer
      Principal: apigateway.amazonaws.com

  FunctionTasKenoAPIProxy:
    Type: AWS::Serverless::Function
    Properties:
      Timeout: 30
      MemorySize: 512
      CodeUri: assetmanager/
      Handler: tenant.lambdaHandler
      Runtime: nodejs20.x
      FunctionName: TasKeno_APIProxy
      Architectures:
        - x86_64
#      Layers:
#        - !Ref NBScoreLayer
      Environment:
        Variables:
          DYNAMODB_TABLE: !Ref DynamoDBTableTasKenoNMS
          S3_CONFIG_BUCKET: !Ref S3ConfigBucket
          COMMISSION_LIBRE_SQS: !Ref QueueCommissionLibre
          COMMISSION_SNMPMON_SQS: !Ref QueueCommissionSNMPMon
          COMMISSION_CRED_SQS: !Ref QueueCommissionCred
      Role: !GetAtt RoleTasKenoAPI.Arn
      VpcConfig:
        SubnetIds:
          - !Ref SubnetTasKenoAPI
        SecurityGroupIds:
          - !Ref SecurityGroupLambdaVPC
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: true
        Target: "es2022"
        Sourcemap: false
        External:
          - "@aws-sdk/client-dynamodb"
          - "@aws-sdk/lib-dynamodb"
          - "@aws-sdk/client-s3"
          - "aws-sdk"
          - "@aws-sdk/client-route-53"
          - "@aws-sdk/client-sqs"
        EntryPoints:
          - tenant.ts

  RestAPITasKeno:
    Type: AWS::ApiGateway::RestApi
    Properties:
      Name: TasKeno_API
      EndpointConfiguration:
        Types:
          - PRIVATE
      Policy:
        Statement:
          - Effect: Allow
            Principal: "*"
            Action: execute-api:Invoke
#            Resource: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestAPITasKeno}/*/*/*
            Resource: 'execute-api/*'

  APIGatewayResourceTasKeno:
    Type: AWS::ApiGateway::Resource
    Properties:
      RestApiId: !Ref RestAPITasKeno
      ParentId: !GetAtt
        - RestAPITasKeno
        - RootResourceId
      PathPart: manager

  APIGatewayResourceTasKenoProxy:
    Type: AWS::ApiGateway::Resource
    Properties:
      RestApiId: !Ref RestAPITasKeno
      ParentId: !Ref APIGatewayResourceTasKeno
      PathPart: '{proxy+}'

  APIGatewayResourceRouterController:
    Type: AWS::ApiGateway::Resource
    Properties:
      RestApiId: !Ref RestAPITasKeno
      ParentId: !GetAtt
        - RestAPITasKeno
        - RootResourceId
      PathPart: controller

  APIGatewayResourceRouterControllerProxy:
    Type: AWS::ApiGateway::Resource
    Properties:
      RestApiId: !Ref RestAPITasKeno
      ParentId: !Ref APIGatewayResourceRouterController
      PathPart: '{proxy+}'

  APIGatewayMethodTasKenoProxyOptions:
    Type: AWS::ApiGateway::Method
    Properties:
      AuthorizationType: NONE
      HttpMethod: OPTIONS
      ResourceId: !Ref APIGatewayResourceTasKenoProxy
      RestApiId: !Ref RestAPITasKeno
      MethodResponses:
        - StatusCode: "200"
          ResponseModels:
            "application/json": "Empty"
            "text/plain": "Empty"
          ResponseParameters:
            method.response.header.Access-Control-Allow-Origin: true
            method.response.header.Access-Control-Allow-Methods: true
            method.response.header.Access-Control-Allow-Headers: true
      Integration:
        Type: MOCK
        IntegrationHttpMethod: ANY
        RequestTemplates:
          "application/json": "{ \"statusCode\": 200 }"
        IntegrationResponses:
          - StatusCode: "200"
            ResponseParameters:
              method.response.header.Access-Control-Allow-Origin: "'*'"
              method.response.header.Access-Control-Allow-Methods: "'POST,PUT,GET,DELETE,OPTIONS'"
              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,responsetype'"
            ResponseTemplates:
              "application/json": ""

  APIGatewayMethodTasKenoProxy:
    Type: AWS::ApiGateway::Method
    DependsOn: APIGatewayResourceTasKenoProxy
    Properties:
      AuthorizationType: CUSTOM
      AuthorizerId: !Ref AuthorizerClient
      HttpMethod: ANY
      ResourceId: !Ref APIGatewayResourceTasKenoProxy
      RestApiId: !Ref RestAPITasKeno
      Integration:
        IntegrationHttpMethod: POST
        Type: AWS_PROXY
        Uri: !Sub
          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${FunctionTasKenoAPIProxy.Arn}/invocations
          - LambdaArn: !GetAtt FunctionTasKenoAPIProxy.Arn
        IntegrationResponses:
          - StatusCode: "200"
            ResponseParameters:
              method.response.header.Access-Control-Allow-Origin: "'*'"
            ResponseTemplates:
              "application/json": ""
              "text/plain": ""
      MethodResponses:
        - StatusCode: '200'
          ResponseModels:
            'application/json': 'Empty'
            'text/plain': 'Empty'
          ResponseParameters:
            method.response.header.Access-Control-Allow-Origin: true


  APIGatewayMethodRouterControllerProxyOptions:
    Type: AWS::ApiGateway::Method
    Properties:
      AuthorizationType: NONE
      HttpMethod: OPTIONS
      ResourceId: !Ref APIGatewayResourceRouterControllerProxy
      RestApiId: !Ref RestAPITasKeno
      MethodResponses:
        - StatusCode: "200"
          ResponseModels:
            "application/json": "Empty"
            "text/plain": "Empty"
          ResponseParameters:
            method.response.header.Access-Control-Allow-Origin: true
            method.response.header.Access-Control-Allow-Methods: true
            method.response.header.Access-Control-Allow-Headers: true
      Integration:
        Type: MOCK
        IntegrationHttpMethod: ANY
        RequestTemplates:
          "application/json": "{ \"statusCode\": 200 }"
        IntegrationResponses:
          - StatusCode: "200"
            ResponseParameters:
              method.response.header.Access-Control-Allow-Origin: "'*'"
              method.response.header.Access-Control-Allow-Methods: "'POST,PUT,GET,DELETE,OPTIONS'"
              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,responsetype'"
            ResponseTemplates:
              "application/json": ""

  APIGatewayMethodRouterControllerProxy:
    Type: AWS::ApiGateway::Method
    DependsOn: APIGatewayResourceRouterControllerProxy
    Properties:
      AuthorizationType: CUSTOM
      AuthorizerId: !Ref AuthorizerClient
      HttpMethod: ANY
      ResourceId: !Ref APIGatewayResourceRouterControllerProxy
      RestApiId: !Ref RestAPITasKeno
      Integration:
        IntegrationHttpMethod: POST
        Type: AWS_PROXY
        Uri: !Sub
          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${FunctionRouterControllerProxy.Arn}/invocations
          - LambdaArn: !GetAtt FunctionRouterControllerProxy.Arn
        IntegrationResponses:
          - StatusCode: "200"
            ResponseParameters:
              method.response.header.Access-Control-Allow-Origin: "'*'"
            ResponseTemplates:
              "application/json": ""
              "text/plain": ""
      MethodResponses:
        - StatusCode: '200'
          ResponseModels:
            'application/json': 'Empty'
            'text/plain': 'Empty'
          ResponseParameters:
            method.response.header.Access-Control-Allow-Origin: true

  APIGatewayResponseDefault4xx:
    Type: 'AWS::ApiGateway::GatewayResponse'
    Properties:
      ResponseType: DEFAULT_4XX
      RestApiId: !Ref RestAPITasKeno
      ResponseParameters:
        gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
        gatewayresponse.header.Access-Control-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,responsetype'"
        gatewayresponse.header.Access-Control-Methods: "'OPTIONS,POST'"

  APIGatewayResponseDefault5xx:
    Type: 'AWS::ApiGateway::GatewayResponse'
    Properties:
      ResponseType: DEFAULT_5XX
      RestApiId: !Ref RestAPITasKeno
      ResponseParameters:
        gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
        gatewayresponse.header.Access-Control-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,responsetype'"
        gatewayresponse.header.Access-Control-Methods: "'OPTIONS,POST'"


#  NBAdminAssociationPPIdOptionsMethod:
#    Type: AWS::ApiGateway::Method
#    Properties:
#      AuthorizationType: NONE
#      HttpMethod: OPTIONS
#      ResourceId: !Ref NBAdminAssociationPPIdResource
#      RestApiId: !Ref NBAdminApi
#      MethodResponses:
#        - StatusCode: "200"
#          ResponseModels:
#            "application/json": "Empty"
#          ResponseParameters:
#            method.response.header.Access-Control-Allow-Origin: true
#            method.response.header.Access-Control-Allow-Methods: true
#            method.response.header.Access-Control-Allow-Headers: true
#      Integration:
#        Type: MOCK
#        IntegrationHttpMethod: ANY
#        RequestTemplates:
#          "application/json": "{ \"statusCode\": 200 }"
#        IntegrationResponses:
#          - StatusCode: "200"
#            ResponseParameters:
#              method.response.header.Access-Control-Allow-Origin: "'*'"
#              method.response.header.Access-Control-Allow-Methods: "'POST,PUT,GET,DELETE,OPTIONS'"
#              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
#            ResponseTemplates:
#              "application/json": ""

  APIGatewayDeploymentProd:
    Type: "AWS::ApiGateway::Deployment"
    DependsOn: APIGatewayMethodTasKenoProxy  # Ensure the method is created before deploying
    Properties:
      RestApiId: !Ref RestAPITasKeno
      Description: 'Deploying my API'

  ApiGatewayStageProd:
    Type: 'AWS::ApiGateway::Stage'
    Properties:
      StageName: 'prod'
      Description: 'Production stage'
      RestApiId: !Ref RestAPITasKeno
      DeploymentId: !Ref APIGatewayDeploymentProd

#  NBAdminCustomDomainMapping:
#    DependsOn: NBAdminApiProdStage
#    Type: 'AWS::ApiGateway::BasePathMapping'
#    Properties:
#      DomainName: !Ref NBScoreCustomDomain
#      RestApiId: !Ref NBAdminApi
#      BasePath: admin
#      Stage: 'prod'
#
  LambdaPermissionTasKenoAPI:
    Type: "AWS::Lambda::Permission"
    Properties:
      Action: lambda:InvokeFunction
      FunctionName: !GetAtt FunctionTasKenoAPIProxy.Arn
      Principal: apigateway.amazonaws.com
      SourceArn: !Join [
        "", [
          "arn:aws:execute-api:",
          { "Ref": "AWS::Region" }, ":",
          { "Ref": "AWS::AccountId" }, ":",
          !Ref RestAPITasKeno, "/*/*/manager*"
        ]
      ]

  LambdaPermissionRouterControllerAPI:
    Type: "AWS::Lambda::Permission"
    Properties:
      Action: lambda:InvokeFunction
      FunctionName: !GetAtt FunctionRouterControllerProxy.Arn
      Principal: apigateway.amazonaws.com
      SourceArn: !Join [
        "", [
          "arn:aws:execute-api:",
          { "Ref": "AWS::Region" }, ":",
          { "Ref": "AWS::AccountId" }, ":",
          !Ref RestAPITasKeno, "/*/*/controller*"
        ]
      ]

  DynamoDBTableTasKenoNMS:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: TasKenoNMS
      AttributeDefinitions:
        - AttributeName: pk
          AttributeType: S
        - AttributeName: sk
          AttributeType: S
      KeySchema:
        - AttributeName: pk
          KeyType: HASH
        - AttributeName: sk
          KeyType: RANGE
      BillingMode: PAY_PER_REQUEST
      GlobalSecondaryIndexes:
        - IndexName: GSI
          KeySchema:
            - AttributeName: sk
              KeyType: HASH
            - AttributeName: pk
              KeyType: RANGE
          Projection:
            ProjectionType: ALL
  FunctionRouterControllerProxy:
    Type: 'AWS::Serverless::Function'
    Properties:
      FunctionName: 'RouterControllerProxyHandler'
      Handler: 'proxy_handler.lambda_handler'
      Runtime: 'python3.12'
      CodeUri: ./mikrotik_api/
      Timeout: 60
      Environment:
        Variables:
          ROUTER_IP: '172.27.244.141'
          ROUTER_USER: 'api'
          ROUTER_PASSWORD: 'apipassword'
          CA_PRIVATE_KEY: '-----BEGIN ENCRYPTED PRIVATE KEY-----\nMIIFHDBOBgkqhkiG9w0BBQ0wQTApBgkqhkiG9w0BBQwwHAQIkIJO8Fz4hfcCAggA\nMAwGCCqGSIb3DQIJBQAwFAYIKoZIhvcNAwcECAEpkCndHnKTBIIEyGaZFCoGSdu6\ne8RJ6hdAZRuI2dOi7+azajD0IzZs3/W317M/BiIzWglRkkv7AUI8TBiP9r95vM9J\nkgUqK+EUA6NlmolHZpvSGmiwqtTwDQ4BwUEynjwtYI7caWpDpmMJK9wnj9jHxp3I\nHclSj1qiB+gqe0B/9EVyzXPmSkAGfzEoEmrEKKZlaKKqA49vg5gYHqscdc/jKRV5\nlxxoJt0Jh8eviduouKmgJ5chwomqePE9rxdXzQewL/s1vNeoedwJzLHmG/o8uRqH\nh6HotJ12NdXfOG2hjjTMaZJvFU6WmDH+yLQLk8 [...]
          CA_KEY_PASSWORD: 'veBRUn*2'
          CA_CERTIFICATE: '-----BEGIN CERTIFICATE-----\nMIIEOTCCAyGgAwIBAgIUK40k8NXeQhYe5TWkkGtgOuloGVIwDQYJKoZIhvcNAQEL\nBQAwgasxCzAJBgNVBAYTAkFVMREwDwYDVQQIDAhUYXNtYW5pYTETMBEGA1UEBwwK\nTGF1bmNlc3RvbjEWMBQGA1UECgwNQmxhY2sgU2FsdCBJVDERMA8GA1UECwwITmV0\nd29ya3MxHzAdBgNVBAMMFkJsYWNrIFNhbHQgSVQgTmV0d29ya3MxKDAmBgkqhkiG\n9w0BCQEWGW1hdGhld0BibGFja3NhbHRpdC5jb20uYXUwHhcNMjIxMjIxMjM0MDA5\nWhcNMjcxMjIwMjM0MDA5WjCBqzELMAkGA1UEBhMCQVUxETAPBgNVBAgMCFRhc21h\nbmlhMRMwEQYDVQQHDApMYXVuY2VzdG9uMRYwFAYDVQQKDA1C [...]
#          OXIDIZED_RSA_KEY: STORED IN FUNCTION AS 4K Env Var limit hit
          DYNAMODB_TABLE: !Ref DynamoDBTableTasKenoNMS
      Role: !GetAtt LambdaExecutionRole.Arn
      VpcConfig:
        SubnetIds:
          - !Ref SubnetTasKenoAPI
        SecurityGroupIds:
          - !Ref SecurityGroupLambdaVPC
  LambdaExecutionRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: 'LambdaExecutionRole'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: 'Allow'
            Principal:
              Service: 'lambda.amazonaws.com'
            Action: 'sts:AssumeRole'
      ManagedPolicyArns:
        - !Ref DynamoDBAccessPolicy
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
      Policies:
        - PolicyName: 'LambdaExecutionPolicy'
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: 'Allow'
                Action:
                  - 'logs:*'
                Resource: '*'

  QueueCommissionLibreDLQ:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: commission-libre-dlq.fifo
      FifoQueue: true
      ContentBasedDeduplication: true
  QueueCommissionLibre:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: commission-libre-queue.fifo
      FifoQueue: true
      ContentBasedDeduplication: true
      VisibilityTimeout: 90
      DelaySeconds: 60
      RedrivePolicy:
        deadLetterTargetArn: !GetAtt QueueCommissionLibreDLQ.Arn
        maxReceiveCount: 5
  RoleSQSCommissionLibreExecution:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
      Policies:
        - PolicyName: SQSCommissionLibreLambdaPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - sqs:ReceiveMessage
                  - sqs:DeleteMessage
                  - sqs:GetQueueAttributes
                Resource:
                  - !GetAtt QueueCommissionLibre.Arn
                  - !GetAtt QueueCommissionLibreDLQ.Arn
  FunctionSQSCommissionLibre:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: SQSCommissionLibre
      Handler: commission-libre.handler
      Role: !GetAtt RoleSQSCommissionLibreExecution.Arn
      Runtime: nodejs20.x
      Environment:
        Variables:
          QUEUE_URL: !Ref QueueCommissionLibre
          LIBRE_API_TOKEN: !Ref LibreToken
          CA_BASE64_CERT: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVPVENDQXlHZ0F3SUJBZ0lVSzQwazhOWGVRaFllNVRXa2tHdGdPdWxvR1ZJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dhc3hDekFKQmdOVkJBWVRBa0ZWTVJFd0R3WURWUVFJREFoVVlYTnRZVzVwWVRFVE1CRUdBMVVFQnd3SwpUR0YxYm1ObGMzUnZiakVXTUJRR0ExVUVDZ3dOUW14aFkyc2dVMkZzZENCSlZERVJNQThHQTFVRUN3d0lUbVYwCmQyOXlhM014SHpBZEJnTlZCQU1NRmtKc1lXTnJJRk5oYkhRZ1NWUWdUbVYwZDI5eWEzTXhLREFtQmdrcWhraUcKOXcwQkNRRVdHVzFoZEdobGQwQmliR0ZqYTNOaGJIUnBkQzVqYjIwdVlYVXdIaGNOTWpJeE1qSXhNak0wTURBNQpXaG [...]
          DYNAMODB_TABLE: !Ref DynamoDBTableTasKenoNMS
      Timeout: 90
      MemorySize: 256
      CodeUri: commission-sqs/
      Architectures:
        - x86_64
      VpcConfig:
        SubnetIds:
          - !Ref SubnetTasKenoAPI
        SecurityGroupIds:
          - !Ref SecurityGroupLambdaVPC
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: true
        Target: "es2022"
        Sourcemap: false
        External:
          - "@aws-sdk/client-dynamodb"
          - "@aws-sdk/lib-dynamodb"
          - "@aws-sdk/client-s3"
          - "aws-sdk"
          - "@aws-sdk/client-route-53"
          - "@aws-sdk/client-sqs"
        EntryPoints:
          - commission-libre.ts
  LambdaSQSTriggerCommissionLibre:
    Type: AWS::Lambda::EventSourceMapping
    Properties:
      BatchSize: 10
      EventSourceArn: !GetAtt QueueCommissionLibre.Arn
      FunctionName: !GetAtt FunctionSQSCommissionLibre.Arn
      Enabled: true


  QueueCommissionSNMPMonDLQ:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: commission-snmpmon-dlq.fifo
      FifoQueue: true
      ContentBasedDeduplication: true
  QueueCommissionSNMPMon:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: commission-snmpmon-queue.fifo
      FifoQueue: true
      ContentBasedDeduplication: true
      VisibilityTimeout: 90
      DelaySeconds: 0
      RedrivePolicy:
        deadLetterTargetArn: !GetAtt QueueCommissionSNMPMonDLQ.Arn
        maxReceiveCount: 5
  RoleSQSCommissionSNMPMonExecution:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
      Policies:
        - PolicyName: SQSCommissionSNMPMonLambdaPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - sqs:ReceiveMessage
                  - sqs:DeleteMessage
                  - sqs:GetQueueAttributes
                Resource:
                  - !GetAtt QueueCommissionSNMPMon.Arn
                  - !GetAtt QueueCommissionSNMPMonDLQ.Arn
        - PolicyName: S3Access
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - s3:*
                  - s3:GetObject
                  - s3:PutObject
                Resource: !Sub arn:aws:s3:::${S3ConfigBucket}/*
  FunctionSQSCommissionSNMPMon:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: SQSCommissionSNMPMon
      Handler: commission-snmpmon.handler
      Role: !GetAtt RoleSQSCommissionSNMPMonExecution.Arn
      Runtime: nodejs20.x
      Environment:
        Variables:
          QUEUE_URL: !Ref QueueCommissionSNMPMon
          S3_CONFIG_BUCKET: !Ref S3ConfigBucket
      Timeout: 90
      MemorySize: 256
      CodeUri: commission-sqs/
      Architectures:
        - x86_64
      VpcConfig:
        SubnetIds:
          - !Ref SubnetTasKenoAPI
        SecurityGroupIds:
          - !Ref SecurityGroupLambdaVPC
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: true
        Target: "es2022"
        Sourcemap: false
        External:
          - "@aws-sdk/client-dynamodb"
          - "@aws-sdk/lib-dynamodb"
          - "@aws-sdk/client-s3"
          - "aws-sdk"
          - "@aws-sdk/client-route-53"
          - "@aws-sdk/client-sqs"
        EntryPoints:
          - commission-snmpmon.ts
  LambdaSQSTriggerCommissionSNMPMon:
    Type: AWS::Lambda::EventSourceMapping
    Properties:
      BatchSize: 10
      EventSourceArn: !GetAtt QueueCommissionSNMPMon.Arn
      FunctionName: !GetAtt FunctionSQSCommissionSNMPMon.Arn
      Enabled: true


  QueueCommissionCredDLQ:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: commission-cred-dlq.fifo
      FifoQueue: true
      ContentBasedDeduplication: true
  QueueCommissionCred:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: commission-cred-queue.fifo
      FifoQueue: true
      ContentBasedDeduplication: true
      VisibilityTimeout: 90
      DelaySeconds: 60
      RedrivePolicy:
        deadLetterTargetArn: !GetAtt QueueCommissionCredDLQ.Arn
        maxReceiveCount: 5
  RoleSQSCommissionCredExecution:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
      Policies:
        - PolicyName: SQSCommissionCredLambdaPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - sqs:ReceiveMessage
                  - sqs:DeleteMessage
                  - sqs:GetQueueAttributes
                Resource:
                  - !GetAtt QueueCommissionCred.Arn
                  - !GetAtt QueueCommissionCredDLQ.Arn
        - PolicyName: DynamoDBAccessPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - dynamodb:DescribeTable
                  - dynamodb:Query
                  - dynamodb:Scan
                  - dynamodb:GetItem
                  - dynamodb:PutItem
                  - dynamodb:UpdateItem
                Resource: !Sub arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${DynamoDBTableTasKenoNMS}

  FunctionSQSCommissionCred:
    Type: AWS::Serverless::Function
    Properties:
      FunctionName: SQSCommissionCred
      Handler: commission-cred.handler
      Role: !GetAtt RoleSQSCommissionCredExecution.Arn
      Runtime: nodejs20.x
      Environment:
        Variables:
          QUEUE_URL: !Ref QueueCommissionCred
          CA_BASE64_CERT: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVPVENDQXlHZ0F3SUJBZ0lVSzQwazhOWGVRaFllNVRXa2tHdGdPdWxvR1ZJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dhc3hDekFKQmdOVkJBWVRBa0ZWTVJFd0R3WURWUVFJREFoVVlYTnRZVzVwWVRFVE1CRUdBMVVFQnd3SwpUR0YxYm1ObGMzUnZiakVXTUJRR0ExVUVDZ3dOUW14aFkyc2dVMkZzZENCSlZERVJNQThHQTFVRUN3d0lUbVYwCmQyOXlhM014SHpBZEJnTlZCQU1NRmtKc1lXTnJJRk5oYkhRZ1NWUWdUbVYwZDI5eWEzTXhLREFtQmdrcWhraUcKOXcwQkNRRVdHVzFoZEdobGQwQmliR0ZqYTNOaGJIUnBkQzVqYjIwdVlYVXdIaGNOTWpJeE1qSXhNak0wTURBNQpXaG [...]
          DYNAMODB_TABLE: !Ref DynamoDBTableTasKenoNMS
          DEFAULT_API_PASSWORD: apipassword
          RADIUS_SECRET: 6tAiCJ8P$N^P^A3ZOEiK3LtqZLfKd^
          RADIUS_SERVER: 172.27.252.10
      Timeout: 90
      MemorySize: 256
      CodeUri: commission-sqs/
      Architectures:
        - x86_64
      VpcConfig:
        SubnetIds:
          - !Ref SubnetTasKenoAPI
        SecurityGroupIds:
          - !Ref SecurityGroupLambdaVPC
    Metadata:
      BuildMethod: esbuild
      BuildProperties:
        Minify: true
        Target: "es2022"
        Sourcemap: false
        External:
          - "@aws-sdk/client-dynamodb"
          - "@aws-sdk/lib-dynamodb"
          - "@aws-sdk/client-s3"
          - "aws-sdk"
          - "@aws-sdk/client-route-53"
          - "@aws-sdk/client-sqs"
        EntryPoints:
          - commission-cred.ts
  LambdaSQSTriggerCommissionCred:
    Type: AWS::Lambda::EventSourceMapping
    Properties:
      BatchSize: 10
      EventSourceArn: !GetAtt QueueCommissionCred.Arn
      FunctionName: !GetAtt FunctionSQSCommissionCred.Arn
      Enabled: true

#Outputs:
  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
  # Find out more about other implicit resources you can reference within SAM
  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
#  HelloWorldApi:
#    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
#    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
#  HelloWorldFunction:
#    Description: "Hello World Lambda Function ARN"
#    Value: !GetAtt HelloWorldFunction.Arn
#  HelloWorldFunctionIamRole:
#    Description: "Implicit IAM Role created for Hello World function"
#    Value: !GetAtt HelloWorldFunctionRole.Arn
